--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@prisma/client": "^4.1.1",
     "apollo-server": "^3.10.0",
-    "graphql": "^16.5.0"
+    "dotenv": "^16.0.1",
+    "graphql": "^16.5.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "prisma": "^4.1.1"
